# ariadne

./: .gitignore  .mcp.json  .npmignore  .npmrc  ANALYSIS-task-152-before-133.md  ANSWER-HOW-TESTS-WERE-FIXED.md  BUILDER_AUDIT.md  CAPTURE_NAME_FIXES_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  EXTENDED_BUILDER_AUDIT.md  FULL_TEST_SUITE_VERIFICATION.md  HANDLER_VERIFICATION.md  LICENSE  METADATA_COVERAGE_FINAL_REPORT.md  METADATA_EXTRACTORS_GUIDE.md  MIGRATION_PLAN_11.75.md  OPTIMIZATION_ANALYSIS.md  PYTHON_QUERY_VERIFICATION_REPORT.md  PYTHON_TEST_VERIFICATION.md  QUERY_PATTERNS_REFERENCE.md  README.md  REFERENCE_METADATA_PLAN.md  RELEASE_NOTES_v0.5.8.md  RUST_TEST_COVERAGE_ANALYSIS.md  RUST_TEST_REGRESSION_ANALYSIS.md  SESSION-FINAL-SUMMARY.md  SymbolId_Comprehensive_Adoption_Report.md  TASK-104.6.3-COMPLETION-REPORT.md  TASK-11.156.1-COMPLETE.md  TASK_11.108.12_COMPLETION_SUMMARY.md  TASK_11.108.12_FINAL_REPORT.md  TASK_11.108.12_SUMMARY.md  TASK_DOCUMENTATION_SUMMARY.md  TEST_MIGRATION_STATUS.md  TEST_REGRESSION_ANALYSIS.md  TEST_RESULTS.md  TREESITTER_ANALYSIS.md  TREESITTER_DEEP_DIVE.md  (+64 more)
.changeset/: README.md  add-mcp-package.md  ariadnejs-scope.md  complete-symbol-context.md  config.json  docs-update.md  epic-11-mcp.md  (+9 more)
demo/benchmarks/: .gitignore  README.md  analyze_results.py  fetch_swebench_tasks.py  manifest.json  mcpbr_ariadne.yaml  pyproject.toml  requirements.txt  run_benchmark.py
demo/benchmarks/agents/: claude_code_ariadne.py
demo/benchmarks/evaluators/: swebench_eval.py
demo/benchmarks/tests/: test_phase0_hardening.py
(+2610 files in other folders)
